-. gridgain opensource 가 현재 구조 변경 중이라, commercial 버전을 사용하도록 변경.

--- a/debop4s-core/pom.xml
+++ b/debop4s-core/pom.xml
@@ -87,11 +87,17 @@
             <artifactId>chill-java</artifactId>
         </dependency>
 
-        <!-- GridGain -->
+        <!-- GridGain Commercial -->
         <dependency>
             <groupId>org.gridgain</groupId>
-            <artifactId>gridgain-core</artifactId>
+            <artifactId>gridgain-datagrid</artifactId>
         </dependency>
+
+        <!-- GridGain -->
+        <!--<dependency>-->
+        <!--<groupId>org.gridgain</groupId>-->
+        <!--<artifactId>gridgain-core</artifactId>-->
+        <!--</dependency>-->
 
         <!-- Fast Serialization -->
         <dependency>
