-. github/gridgin/gridgain 의 tag 6.0.2 를 다운받아 빌드 후 사용했습니다. (주의: gridgain pom 에 jar 하나로 만들어주는 plugin 이 있는데, 이 놈이 예외를 냅니다. 이 놈을 없애고 maven 을 실행하세요)

--- a/debop4s-core/pom.xml
+++ b/debop4s-core/pom.xml
@@ -87,17 +87,11 @@
             <artifactId>chill-java</artifactId>
         </dependency>
 
-        <!-- GridGain Commercial -->
+        <!-- GridGain -->
         <dependency>
             <groupId>org.gridgain</groupId>
-            <artifactId>gridgain-datagrid</artifactId>
+            <artifactId>gridgain-core</artifactId>
         </dependency>
-
-        <!-- GridGain -->
-        <!--<dependency>-->
-        <!--<groupId>org.gridgain</groupId>-->
-        <!--<artifactId>gridgain-core</artifactId>-->
-        <!--</dependency>-->
 
         <!-- Fast Serialization -->
         <dependency>
