--- a/hibernate-rediscala/pom.xml
+++ b/hibernate-rediscala/pom.xml
@@ -52,16 +52,11 @@
             <artifactId>snappy-java</artifactId>
         </dependency>
 
-        <!-- GridGain Commercial -->
+        <!-- GridGain -->
         <dependency>
             <groupId>org.gridgain</groupId>
-            <artifactId>gridgain-datagrid</artifactId>
+            <artifactId>gridgain-core</artifactId>
         </dependency>
-        <!-- GridGain -->
-        <!--<dependency>-->
-        <!--<groupId>org.gridgain</groupId>-->
-        <!--<artifactId>gridgain-core</artifactId>-->
-        <!--</dependency>-->
 
         <!-- Scala Pickling -->
         <dependency>
