--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
         <querydsl.version>3.3.1</querydsl.version>
 
         <hibernate.validator.version>5.0.1.Final</hibernate.validator.version>
-        <chill.version>0.3.6</chill.version>
+
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -58,6 +58,19 @@
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-actors</artifactId>
         </dependency>
+
+        <!-- Scala ARM -->
+        <dependency>
+            <groupId>com.jsuereth</groupId>
+            <artifactId>scala-arm_${scala.main.version}</artifactId>
+        </dependency>
+
+        <!-- RxScala -->
+        <dependency>
+            <groupId>com.netflix.rxjava</groupId>
+            <artifactId>rxjava-scala</artifactId>
+        </dependency>
+
 
         <!-- ScalaTest -->
         <dependency>
@@ -141,6 +154,20 @@
                 <groupId>org.scala-lang</groupId>
                 <artifactId>scala-actors</artifactId>
                 <version>${scala.version}</version>
+            </dependency>
+
+            <!-- Scala ARM -->
+            <dependency>
+                <groupId>com.jsuereth</groupId>
+                <artifactId>scala-arm_${scala.main.version}</artifactId>
+                <version>1.3</version>
+            </dependency>
+
+            <!-- RxScala -->
+            <dependency>
+                <groupId>com.netflix.rxjava</groupId>
+                <artifactId>rxjava-scala</artifactId>
+                <version>0.17.1</version>
             </dependency>
 
             <!-- Akka -->
@@ -294,88 +321,11 @@
                 <version>1.1.0.1</version>
             </dependency>
 
-
-            <!-- GridGain : https://github/gridgain/gridgain 을 다운받아 빌드해야 합니다.  -->
-            <dependency>
-                <groupId>org.gridgain</groupId>
-                <artifactId>gridgain-core</artifactId>
-                <version>6.0.2</version>
-                <exclusions>
-                    <exclusion>
-                        <groupId>org.gridgain</groupId>
-                        <artifactId>gridgain-commons-deps</artifactId>
-                    </exclusion>
-                    <exclusion>
-                        <groupId>org.gridgain</groupId>
-                        <artifactId>gridgain-hadoop2-deps</artifactId>
-                    </exclusion>
-                    <exclusion>
-                        <groupId>org.gridgain</groupId>
-                        <artifactId>gridgain-spring-deps</artifactId>
-                    </exclusion>
-                    <exclusion>
-                        <groupId>org.gridgain</groupId>
-                        <artifactId>gridgain-aspectj-deps</artifactId>
-                    </exclusion>
-                    <exclusion>
-                        <groupId>org.gridgain</groupId>
-                        <artifactId>gridgain-jetty-deps</artifactId>
-                    </exclusion>
-                    <exclusion>
-                        <groupId>org.gridgain</groupId>
-                        <artifactId>gridgain-hibernate-deps</artifactId>
-                    </exclusion>
-                    <exclusion>
-                        <groupId>org.slf4j</groupId>
-                        <artifactId>slf4j-log4j12</artifactId>
-                    </exclusion>
-                    <exclusion>
-                        <groupId>log4j</groupId>
-                        <artifactId>log4j</artifactId>
-                    </exclusion>
-                    <!-- jboss 에서 jboss.logging 을 사용해서 문제가 된다 -->
-                    <exclusion>
-                        <groupId>jboss</groupId>
-                        <artifactId>jboss-common</artifactId>
-                    </exclusion>
-                    <exclusion>
-                        <groupId>jboss</groupId>
-                        <artifactId>jboss-jmx</artifactId>
-                    </exclusion>
-                    <exclusion>
-                        <groupId>jboss</groupId>
-                        <artifactId>jboss-system</artifactId>
-                    </exclusion>
-                    <exclusion>
-                        <artifactId>jboss-logging</artifactId>
-                        <groupId>org.jboss.logging</groupId>
-                    </exclusion>
-                </exclusions>
-            </dependency>
-
-
             <!-- Fast Serialization -->
             <dependency>
                 <groupId>de.ruedigermoeller</groupId>
                 <artifactId>fst</artifactId>
                 <version>1.53</version>
-            </dependency>
-
-            <!-- Twitter/Chill -->
-            <dependency>
-                <groupId>com.twitter</groupId>
-                <artifactId>chill_${scala.main.version}</artifactId>
-                <version>${chill.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.twitter</groupId>
-                <artifactId>chill-bijection_${scala.main.version}</artifactId>
-                <version>${chill.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.twitter</groupId>
-                <artifactId>chill-java</artifactId>
-                <version>${chill.version}</version>
             </dependency>
 
             <!-- Jackson JSON Serializer -->
