--- a/debop4s-core/pom.xml
+++ b/debop4s-core/pom.xml
@@ -150,15 +150,17 @@
         </dependency>
 
         <!-- ASM -->
-        <!-- NOTE: org.ow2.asm 4.1 을 사용하면 안되고, 꼭 asm 3.x 버전을 사용하세요 -->
+        <!-- NOTE: Spring 3.x 에서는 org.ow2.asm 4.1 을 사용하면 안되고, 꼭 asm 3.x 버전을 사용하세요 -->
+        <!-- NOTE: Spring 4.0 이상에서는 org.ow2.asm 4.2 이상을 사용해야 합니다. -->
         <dependency>
             <groupId>org.ow2.asm</groupId>
             <artifactId>asm-all</artifactId>
         </dependency>
-        <dependency>
-            <groupId>cglib</groupId>
-            <artifactId>cglib</artifactId>
-        </dependency>
+        <!--<dependency>-->
+        <!--<groupId>cglib</groupId>-->
+        <!--<artifactId>cglib</artifactId>-->
+        <!--</dependency>-->
+
         <!--<dependency>-->
         <!--<groupId>asm</groupId>-->
         <!--<artifactId>asm</artifactId>-->
