--- a/pom.xml
+++ b/pom.xml
@@ -376,21 +376,21 @@
             <dependency>
                 <groupId>org.modelmapper</groupId>
                 <artifactId>modelmapper</artifactId>
-                <version>0.6.3</version>
+                <version>[0.6, )</version>
             </dependency>
 
             <!-- 암호화 -->
             <dependency>
                 <groupId>org.jasypt</groupId>
                 <artifactId>jasypt</artifactId>
-                <version>1.9.1</version>
+                <version>[1.9, )</version>
             </dependency>
 
             <!-- joda-time -->
             <dependency>
                 <groupId>joda-time</groupId>
                 <artifactId>joda-time</artifactId>
-                <version>2.3</version>
+                <version>[2.3, )</version>
             </dependency>
             <dependency>
                 <groupId>org.joda</groupId>
@@ -402,28 +402,28 @@
             <dependency>
                 <groupId>ch.qos.logback</groupId>
                 <artifactId>logback-classic</artifactId>
-                <version>1.0.13</version>
+                <version>[1.1, )</version>
             </dependency>
             <dependency>
                 <groupId>ch.qos.logback</groupId>
                 <artifactId>logback-access</artifactId>
-                <version>1.0.13</version>
+                <version>[1.1, )</version>
             </dependency>
 
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
-                <version>1.7.6</version>
+                <version>[1.7.6, )</version>
             </dependency>
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-log4j12</artifactId>
-                <version>1.7.6</version>
+                <version>[1.7.6, )</version>
             </dependency>
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>jcl-over-slf4j</artifactId>
-                <version>1.7.6</version>
+                <version>[1.7.6, )</version>
             </dependency>
 
             <!-- Commons Logging -->
@@ -660,6 +660,7 @@
                 <version>${querydsl.version}</version>
             </dependency>
 
+
             <!-- Mongo Client -->
             <dependency>
                 <groupId>org.reactivemongo</groupId>
@@ -700,28 +701,28 @@
             <dependency>
                 <groupId>com.zaxxer</groupId>
                 <artifactId>HikariCP</artifactId>
-                <version>1.3.3</version>
+                <version>[1.3, )</version>
             </dependency>
 
             <!-- Database Drivers -->
             <dependency>
                 <groupId>org.hsqldb</groupId>
                 <artifactId>hsqldb</artifactId>
-                <version>2.3.1</version>
+                <version>[2.3, )</version>
                 <scope>test</scope>
             </dependency>
 
             <dependency>
                 <groupId>com.h2database</groupId>
                 <artifactId>h2</artifactId>
-                <version>1.3.175</version>
+                <version>[1.3, )</version>
                 <scope>test</scope>
             </dependency>
 
             <dependency>
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
-                <version>5.1.29</version>
+                <version>[5.1, )</version>
                 <scope>test</scope>
             </dependency>
 
@@ -743,42 +744,6 @@
                 <groupId>javax.servlet</groupId>
                 <artifactId>jstl</artifactId>
                 <version>1.2</version>
-            </dependency>
-
-            <!-- Avro -->
-            <dependency>
-                <groupId>org.apache.avro</groupId>
-                <artifactId>avro</artifactId>
-                <version>1.7.5</version>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.avro</groupId>
-                <artifactId>avro-ipc</artifactId>
-                <version>1.7.5</version>
-            </dependency>
-
-            <!-- Twitter4J -->
-            <dependency>
-                <groupId>org.twitter4j</groupId>
-                <artifactId>twitter4j-core</artifactId>
-                <version>3.0.3</version>
-            </dependency>
-            <dependency>
-                <groupId>org.twitter4j</groupId>
-                <artifactId>twitter4j-stream</artifactId>
-                <version>3.0.3</version>
-            </dependency>
-            <dependency>
-                <groupId>org.twitter4j</groupId>
-                <artifactId>twitter4j-async</artifactId>
-                <version>3.0.3</version>
-            </dependency>
-
-            <!-- Facebook -->
-            <dependency>
-                <groupId>org.facebook4j</groupId>
-                <artifactId>facebook4j-core</artifactId>
-                <version>1.1.9</version>
             </dependency>
 
             <!-- Test -->
