-. Activate Framework 예제 추가. -. scala-async 라이브러리 추가 ( async, await 함수 제공 )

--- a/debop4s-experiments/pom.xml
+++ b/debop4s-experiments/pom.xml
@@ -20,6 +20,13 @@
 
     <dependencies>
 
+        <!-- Scala Async -->
+        <dependency>
+            <groupId>org.scala-lang.modules</groupId>
+            <artifactId>scala-async_2.10</artifactId>
+            <version>[0.9.0-M4, )</version>
+        </dependency>
+
         <!-- activate framework -->
         <dependency>
             <groupId>net.fwbrasil</groupId>
