--- a/pom.xml
+++ b/pom.xml
@@ -402,28 +402,28 @@
             <dependency>
                 <groupId>ch.qos.logback</groupId>
                 <artifactId>logback-classic</artifactId>
-                <version>[1.1, )</version>
+                <version>1.1.1</version>
             </dependency>
             <dependency>
                 <groupId>ch.qos.logback</groupId>
                 <artifactId>logback-access</artifactId>
-                <version>[1.1, )</version>
+                <version>1.1.1</version>
             </dependency>
 
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
-                <version>[1.7.6, )</version>
+                <version>1.7.6</version>
             </dependency>
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-log4j12</artifactId>
-                <version>[1.7.6, )</version>
+                <version>1.7.6</version>
             </dependency>
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>jcl-over-slf4j</artifactId>
-                <version>[1.7.6, )</version>
+                <version>1.7.6</version>
             </dependency>
 
             <!-- Commons Logging -->
@@ -701,28 +701,28 @@
             <dependency>
                 <groupId>com.zaxxer</groupId>
                 <artifactId>HikariCP</artifactId>
-                <version>[1.3, )</version>
+                <version>1.3.3</version>
             </dependency>
 
             <!-- Database Drivers -->
             <dependency>
                 <groupId>org.hsqldb</groupId>
                 <artifactId>hsqldb</artifactId>
-                <version>[2.3, )</version>
+                <version>2.3.2</version>
                 <scope>test</scope>
             </dependency>
 
             <dependency>
                 <groupId>com.h2database</groupId>
                 <artifactId>h2</artifactId>
-                <version>[1.3, )</version>
+                <version>1.3.175</version>
                 <scope>test</scope>
             </dependency>
 
             <dependency>
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
-                <version>[5.1, )</version>
+                <version>5.1.29</version>
                 <scope>test</scope>
             </dependency>
 
