-. 원격 테스트를 위해 MySQL 을 사용하지 않고, H2 를 사용하도록 변경. 2

--- a/debop4s-data/src/test/resources/hikari-mysql.properties
+++ b/debop4s-data/src/test/resources/hikari-mysql.properties
@@ -2,10 +2,10 @@
 acquireIncrement=8
 acquireRetryDelay=1000
 connectionTestQuery=SELECT 1
-maximumPoolSize=50
+maximumPoolSize=100
 dataSourceClassName=com.mysql.jdbc.jdbc2.optional.MysqlDataSource
-dataSource.user=root
-dataSource.password=root
+dataSource.user=sa
+dataSource.password=
 dataSource.databaseName=test
 dataSource.serverName=localhost
 
