--- a/debop4s-experiments/pom.xml
+++ b/debop4s-experiments/pom.xml
@@ -20,6 +20,25 @@
 
     <dependencies>
 
+        <!-- Slick -->
+        <dependency>
+            <groupId>com.typesafe.slick</groupId>
+            <artifactId>slick_2.10</artifactId>
+            <version>2.0.0</version>
+        </dependency>
+
+        <!-- Lift Json -->
+        <dependency>
+            <groupId>net.liftweb</groupId>
+            <artifactId>lift-json_${scala.main.version}</artifactId>
+            <version>2.5.1</version>
+        </dependency>
+        <dependency>
+            <groupId>net.liftweb</groupId>
+            <artifactId>lift-json-ext_${scala.main.version}</artifactId>
+            <version>2.5.1</version>
+        </dependency>
+
         <!-- Scala Async -->
         <dependency>
             <groupId>org.scala-lang.modules</groupId>
@@ -201,11 +220,6 @@
         </dependency>
         <dependency>
             <groupId>io.spray</groupId>
-            <artifactId>spray-can</artifactId>
-            <version>${spray.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>io.spray</groupId>
             <artifactId>spray-client</artifactId>
             <version>${spray.version}</version>
         </dependency>
@@ -228,6 +242,12 @@
             <groupId>io.spray</groupId>
             <artifactId>spray-servlet</artifactId>
             <version>${spray.version}</version>
+        </dependency>
+        <!-- spray-json -->
+        <dependency>
+            <groupId>io.spray</groupId>
+            <artifactId>spray-json_${scala.main.version}</artifactId>
+            <version>1.2.5</version>
         </dependency>
 
         <!-- Infinispan -->
