--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: scala
-script: sbt compile
+script:
+  - sbt ++$TRAVIS_SCALA_VERSION test
 
 scala:
   - 2.10.4
@@ -7,8 +8,9 @@ jdk:
   - oraclejdk7
 services:
   - redis
+  - mongodb
 env:
-  - SBT_OPTS="-ea -server -Xmx8192m -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled -XX:PermSize=256M -XX:MaxPermSize=512M"
+  - SBT_OPTS="-ea -server -Xmx2G -XX:PermSize=256M -XX:MaxPermSize=512M -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled"
 
 # whitelist
 branches:
