--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,10 @@ language: scala
 script:
   - sbt ++$TRAVIS_SCALA_VERSION test
 
+before_script:
+  - echo "USE mysql;\nUPDATE user SET password=PASSWORD('root') WHERE user='root';\nFLUSH PRIVILEGES;\n" | mysql -u root
+  - mysql -e 'create database hibernate'
+
 scala:
   - 2.10.4
 jdk:
@@ -9,6 +13,8 @@ jdk:
 services:
   - redis
   - mongodb
+  - mysql
+
 env:
   - SBT_OPTS="-ea -server -Xmx2G -XX:PermSize=256M -XX:MaxPermSize=512M -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled"
 
