--- a/debop4s-data/src/test/resources/hikari-mysql.properties
+++ b/debop4s-data/src/test/resources/hikari-mysql.properties
@@ -4,10 +4,13 @@ acquireRetryDelay=1000
 connectionTestQuery=SELECT 1
 maximumPoolSize=100
 dataSourceClassName=com.mysql.jdbc.jdbc2.optional.MysqlDataSource
-dataSource.user=sa
-dataSource.password=
-dataSource.databaseName=test
-dataSource.serverName=localhost
+dataSource.url=jdbc:mysql://localhost/test
+dataSource.user=root
+dataSource.password=root
+dataSource.cachePrepStmts=true
+dataSource.prepStmtCacheSize=250
+dataSource.prepStmtCacheSqlLimit=2048
+dataSource.useServerPrepStmts=true
 
 # use UTF-8 in MySQL
 dataSource.encoding=UTF-8
