--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>debop4s-redis</module>
         <module>debop4s-mongo</module>
         <module>debop4s-data</module>
+        <module>debop4s-data-jpa</module>
     </modules>
 
     <properties>
