--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>debop4s-mongo</module>
         <module>debop4s-data</module>
         <module>debop4s-data-jpa</module>
+        <module>debop4s-testing</module>
     </modules>
 
     <properties>
