--- a/debop4s-redis/pom.xml
+++ b/debop4s-redis/pom.xml
@@ -38,6 +38,12 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- scala async -->
+        <dependency>
+            <groupId>org.scala-lang.modules</groupId>
+            <artifactId>scala-async_${scala.main.version}</artifactId>
+        </dependency>
+
         <!-- Spring -->
         <dependency>
             <groupId>org.springframework</groupId>
