-. scala 2.11 으로 upgrade -. rediscala 1.3.1

--- a/debop4s-mongo/pom.xml
+++ b/debop4s-mongo/pom.xml
@@ -37,8 +37,8 @@
 
         <!-- Mongo Client -->
         <dependency>
-            <groupId>org.reactivemongo</groupId>
-            <artifactId>reactivemongo_${scala.main.version}</artifactId>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongo-java-driver</artifactId>
         </dependency>
 
         <dependency>
